--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,14 +4,81 @@ body {
     font-family:'Cinzel', 'Open Sans', Arial, sans-serif;
     margin: 0;
     padding: 0;
-  }
+}
+
+.container {
+    position: relative;
+    padding-top: 3.5em;
+    background-color: #ffffff;
+    min-height: 100vh;
+}
   
-header {
+.header {
     display: flex;
-    justify-content: space-between;
-    padding: 1rem;
+    justify-content: flex-start;
+    align-items: center;
+    border-bottom: 2px solid transparent;
+    background-color: #fff;
+    height: 3.5em;
+    line-height: 3.5em;
+    padding-left: 1.5em;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 10000;
+}
+
+.header a {
+    color: inherit;
+    font-size: 0.8em;
+    font-weight: 500;
+    letter-spacing: 0.25em;
+    text-transform: uppercase;
+    border: 0;
+}
+
+.header .logo {
+    display: block;
+    height: inherit;
+    line-height: inherit;
+}
+
+.header .logo span {
+    font-weight: 300;
+}
+
+
+main {
+    font-family: 'Open Sans', Arial, sans-serif;
+    font-weight: 400;
+}
+
+.banner {
     background-color: #333;
-    color: #fff;
+    color: rgba(255, 255, 255, 0.75);
+    padding: 8em 0 6em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: url("../img/banner.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+    position: relative;
+    text-align: center;
+    overflow: hidden;
+}
+
+.banner h1 {
+    color: #ffffff;
+    font-size: 2.75em;
+}
+
+.banner .inner {
+    opacity: 1;
+    position: relative;
+    z-index: 2;
 }
   
 .logo {
@@ -27,6 +94,8 @@ button {
 }
   
 .hero {
+    height: 100vh;
+    font-family: 'Cinzel', Arial, sans-serif;
     text-align: center;
     padding: 2rem;
     background-color: #f4f4f4;
