--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,13 +15,13 @@ body {
   
 .header {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     border-bottom: 2px solid transparent;
     background-color: #fff;
     height: 3.5em;
     line-height: 3.5em;
-    padding-left: 1.5em;
+    padding: 1.5em;
     position: fixed;
     top: 0;
     width: 100%;
@@ -41,12 +41,16 @@ body {
     display: block;
     height: inherit;
     line-height: inherit;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
-.header .logo span {
-    font-weight: 300;
-}
 
+
+section {
+    text-align: center;
+}
 
 main {
     font-family: 'Open Sans', Arial, sans-serif;
@@ -60,7 +64,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url("../img/banner.jpg");
+    background-image: url("../img/banner1.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -71,7 +75,7 @@ main {
 }
 
 .banner h1 {
-    color: #ffffff;
+    color: #fff;
     font-size: 2.75em;
 }
 
@@ -81,24 +85,34 @@ main {
     z-index: 2;
 }
   
-.logo {
-    font-size: 1.5rem;
-}
-  
-button {
-    padding: 0.5rem 1rem;
-    background-color: #f4a261;
-    border: none;
-    color: #fff;
+.button {
+    transition: 
+      background-color 0.2s ease-in-out, 
+      color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+    border-radius: 4px;
+    border: 0;
     cursor: pointer;
-}
-  
-.hero {
-    height: 100vh;
-    font-family: 'Cinzel', Arial, sans-serif;
+    display: inline-block;
+    font-size: 0.8em;
+    font-weight: 500;
+    font-family: 'Open Sans';
+    height: 3.75em;
+    letter-spacing: 0.25em;
+    line-height: 3.75em;
+    padding: 0 2em;
     text-align: center;
-    padding: 2rem;
-    background-color: #f4f4f4;
+    text-decoration: none;
+    text-transform: uppercase;
+    white-space: nowrap;
+    min-width: 10em;
+    margin-right: 1;
+    background-color: #dbd7d2;
+    box-shadow: none;
+    color: #333;
+}
+
+.button:hover {
+    background-color: #65caea;
 }
   
 .products, .contact {
